simple-webapp-mysql-scenario-3/kube-files/webapp-route-definition.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: simple-webapp
spec:
  to:
    kind: Service
    name: webapp-service
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
